V2 (#147)
* Carefully working through initialization.

* jdk-16 testing :-)

* Working through ABI issues.

* Adding 32bit analysis

* Starting down 32bit compat testing.

* Adding type kwd caching.

* Lots of work bringing the system up.

* Updating dtype-next and have 'dir' working

* Simple dict working.

* Unpacking dicts and lists,tuples is working.

* Error handling.

* Most of copying done and working on function bridging.

* defining python functions somewhat works.

* Started work on bridging.

* Lots of fixes and bridging *from* python works atm.

* Lots additions pulling the good parts of bridging over.

* Starting to carry tests across.

* Fixing initialization so loading local modules works.

* Unit tests passing again :-).

* Have just a couple more tests.

* All tests pass :-).

* v2 passes unit tests.

* Fix leaking tuple refcount && avoid looking up atts we don't use.

* Re-working how custom classes work.

* Major refactoring to greatly reduce GC interactions.

* Attempting to get more test feedback

* Turned on vastly more logging...

* Adding single test and working from there.

* test-golf

* Fixing unittest issues.

* Adding a few more tests back.

* The big daddy, require-python.  If this passes we are doing quite well.

* Final bit of tests.

* Disable debug tracing

* Carrying perf enhancements across from v1.

* Commenting namespaces